# particles-animation

./: .gitignore  pyproject.toml
src/anim/: __init__.py  anim.py
src/dynamics/: __init__.py  particles_dynamics.py  particles_parameters.py  trajectory.py
src/particles_simulation/: main.py
src/sim/: simulator.py
