[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
  "wheel",
  "tk",
]
build-backend = "setuptools.build_meta"

[project]
name = "particles-simulator"
version = "0.0.1"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]
requires-python = ">=3.10"
authors = [
  {name = "Maksim Surov", email = "surov.m.o@gmail.com"}
]
maintainers = [
  {name = "Maksim Surov", email = "surov.m.o@gmail.com"}
]
description = "Numerical simulation of colliding particles in a box"
readme = "readme.md"
license = {text = "GNU"}
keywords = ["simulation"]

[project.entry-points."particles_simulation.main"]
run_particles_simulation = "particles_simulation:main"
